--- a/app/lib/template.html.erb
+++ b/app/lib/template.html.erb
@@ -13,15 +13,9 @@
   </head>
   <body>
     <ol>
-      
-        <li style='background-color:#112233'></li>
-      
-        <li style='background-color:#456789'></li>
-      
-        <li style='background-color:#445566'></li>
-      
-        <li style='background-color:#667788'></li>
-      
+      <% app.squares.each do |square| %>
+        <li style='background-color:#<%= square.color %>'></li>
+      <% end %>
     </ol>
   </body>
 </html>
