--- a/views/form.erb
+++ b/views/form.erb
@@ -2,25 +2,10 @@
 <html>
   <head>
     <title>Ruby Text to Squares</title>
-<!--       <link rel="stylesheet" type="text/css" href="style.css" />
- -->
-     <style type="text/css">
-      body {
-            background-color:#ececec;
-            font-family:'Droid Sans', arial, sans-serif;
-            color: #777;
-            }
-      #page {
-            max-width: 600px;
-            margin: 12px auto;
-            padding:0 30px 30px;
-            background-color:#fff;
-            z-index: 0;
-}
-    </style>
+      <link rel="stylesheet" type="text/css" href="/css/style.css" />
   </head>
   <body>
-    <div id="page">
+    <div id="page" class="white_bg">
     <h1>Text to squares</h1>
     <p>Please input a string:</p>
     <form method='post'>
