--- a/views/form.erb
+++ b/views/form.erb
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Ruby Text to Squares</title>
-      <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
   </head>
   <body>
     <div id="page" class="white_bg">
