--- a/views/template.erb
+++ b/views/template.erb
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Text to Squares</title>  
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
   </head>
   <body>
