--- a/lib/template.html.erb
+++ b/lib/template.html.erb
@@ -1,35 +1,30 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Your Text:</b>
-  <%= @text.input %>
-</p>
+<html>
+  <head>
     <style>
       ol {
-        clear: both;
+	      clear: both;
         list-style-type: none;
         padding: 0;
       }
       .square {
         display: block;
-        float: left;
+		    float: left;
         width: 50px;
         height: 50px;
       }
     </style>
- 
+  </head>
+  <body>
     <ol>
-      <% @text.rows.each do |row| %>
-        <li>
-          <ol>
+      <% rows.each do |row| %>
+    		<li>
+    		  <ol>
             <% row.each do |square| %>
               <li class="square" style='background-color:#<%= square.color %>'></li>
-            <% end %>
-          </ol>
-        </li> 
+    		  	<% end %>
+    		  </ol>
+    		</li> 
       <% end %>
     </ol>
-
-<br>
-<%= link_to 'Edit', edit_text_path(@text) %> |
-<%= link_to 'Back', texts_path %>
+  </body>
+</html>
