--- a/app/views/texts/show.html.erb
+++ b/app/views/texts/show.html.erb
@@ -20,4 +20,4 @@
 <br>
 <br>
 <%= link_to 'Edit', edit_text_path(@text) %> |
-<%= link_to 'Back', texts_path %>
+<%= link_to 'Listing texts', texts_path %>
