--- a/app/views/texts/_form.html.erb
+++ b/app/views/texts/_form.html.erb
@@ -13,9 +13,9 @@
 
   <div class="field">
     <%= f.label :input %><br />
-    <%= f.text_area :input %>
+    <%= f.text_area :input,  :placeholder => "Type your text in here"  %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+      <%= f.submit %>
   </div>
 <% end %>
