--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Listing texts</h1>
 
-<table>
+<table class="table table-hover">
   <tr>
-    <th>Input</th>
+    <th><strong>Input</strong></th>
     <th></th>
     <th></th>
     <th></th>
@@ -11,9 +11,9 @@
 <% @texts.each do |text| %>
   <tr>
     <td><%= text.input %></td>
-    <td><%= link_to 'Show', text %></td>
-    <td><%= link_to 'Edit', edit_text_path(text) %></td>
-    <td><%= link_to 'Destroy', text, confirm: 'Are you sure?', method: :delete %></td>
+    <td><i class="icon-stop"></i>&nbsp;<%= link_to 'Show', text %></td>
+    <td><i class="icon-wrench"></i>&nbsp;<%= link_to 'Edit', edit_text_path(text) %></td>
+    <td><i class="icon-trash"></i>&nbsp;<%= link_to 'Destroy', text, confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
