new button text

--- a/app/views/texts/_form.html.erb
+++ b/app/views/texts/_form.html.erb
@@ -16,6 +16,6 @@
     <%= f.text_area :input,  :placeholder => "Type your text in here"  %>
   </div>
   <div class="actions">
-      <%= f.submit %>
+      <%= f.submit("Create Picture") %>
   </div>
 <% end %>
