--- a/app/views/texts/_form.html.erb
+++ b/app/views/texts/_form.html.erb
@@ -12,10 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :input %><br />
+    <%# f.label :input %><br />
     <%= f.text_area :input,  :placeholder => "Type your text in here"  %>
   </div>
   <div class="actions">
       <%= f.submit("Create Picture") %>
   </div>
 <% end %>
+
+
+<%# if @text.nil? %>
+<!--       <h2>You didn't write anything. Try it again!</h2>
+ -->
+  <%# end %>
