just some text changed  and a link added

--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -2,7 +2,7 @@
 
 <table class="table table-hover">
   <tr>
-    <th><strong>Input</strong></th>
+    <th>INPUT</th>
     <th></th>
     <th></th>
     <th></th>
