--- a/app/views/texts/_form.html.erb
+++ b/app/views/texts/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_area :input,  :placeholder => "Type your text in here"  %>
   </div>
   <div class="actions">
-      <%= f.submit("Create Picture") %>
+      <%= f.submit("Create Picture", :class => "btn btn-primary") %>
   </div>
 <% end %>
 
