--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <h2>Welcome to the Application</h2>
 <h1> Text_To_Squares </h1>
 <hr>
-<p>This is the project of weeks<br> of hard work by 6 woman and<br> two patient coaches.</p>
+<p>This is the project of weeks<br> of hard work by seven woman and<br> two patient coaches.</p>
 <hr>
 <%= link_to "Let's Start", new_text_path, class:"btn btn-primary btn-large" %>
 </div>
