new validation in test.rb and in css ul without list-style-type

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -13,6 +13,12 @@ ol {
   padding: 0;
   }
 
+ul {
+  clear: both;
+  list-style-type: none;
+  padding: 0;
+  }
+
 .square {
         display: block;
         float: left;
