--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -7,14 +7,16 @@
       <th></th>
       <th></th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
 <% @texts.each do |text| %>
   <tr>
-    <td style="max-width:300px"><%= text.input %></td>
+    <td style="width:300px"><%= text.input %></td>
     <td><i class="icon-stop"></i>&nbsp;<%= link_to 'Show', text %></td>
     <td><i class="icon-wrench"></i>&nbsp;<%= link_to 'Edit', edit_text_path(text) %></td>
     <td><i class="icon-trash"></i>&nbsp;<%= link_to 'Destroy', text, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= text.created_at.strftime("%d %b. %Y") %></td>
   </tr>
 <% end %>
 </table>
