--- a/app/views/texts/_form.html.erb
+++ b/app/views/texts/_form.html.erb
@@ -10,6 +10,14 @@
     </div>
   <% end %>
 
+  <p>
+    <select name="text[user_id]" size="1">
+      <option value="1">Anja</option>
+      <option value="2">Max</option>
+      <option value="3">Moritz</option>
+    </select>
+  </p>
+
   <div class="field">
     <%# f.label :input %><br />
     <%= f.text_area :input,  :placeholder => "Type your text in here"  %>
@@ -20,7 +28,3 @@
 <% end %>
 
 
-<%# if @text.nil? %>
-<!--       <h2>You didn't write anything. Try it again!</h2>
- -->
-  <%# end %>
