--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -3,6 +3,7 @@
 <table class="table table-hover">
   <thead>
     <tr>
+      <th>USER</th>
       <th>INPUT</th>
       <th></th>
       <th></th>
@@ -12,7 +13,8 @@
   </thead>
 <% @texts.each do |text| %>
   <tr>
-    <td style="width:300px"><%= text.input %></td>
+    <td><%= text.user.name %></td>
+    <td style="width:300px;word-wrap: break-word;"><%= text.input %></td>
     <td><i class="icon-stop"></i>&nbsp;<%= link_to 'Show', text %></td>
     <td><i class="icon-wrench"></i>&nbsp;<%= link_to 'Edit', edit_text_path(text) %></td>
     <td><i class="icon-trash"></i>&nbsp;<%= link_to 'Destroy', text, confirm: 'Are you sure?', method: :delete %></td>
