--- a/app/views/texts/_form.html.erb
+++ b/app/views/texts/_form.html.erb
@@ -10,13 +10,11 @@
     </div>
   <% end %>
 
-  <p>
-    <select name="text[user_id]" size="1">
-      <option value="1">Anja</option>
-      <option value="2">Max</option>
-      <option value="3">Moritz</option>
-    </select>
-  </p>
+
+  <div class="field">
+    <%= f.label :user_id %><br />
+    <%= f.collection_select :user_id, User.all, :id, :name %>
+  </div>
 
   <div class="field">
     <%# f.label :input %><br />
