word-wrap and table width changed in css

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -21,7 +21,13 @@ ul {
 
 th {
    color:#08c;
-   word-wrap: break-word;
+   
+}
+
+table td {
+  width:200px;
+  word-wrap: break-word;
+  white-space:normal;
 }
 
 .square {
