change label in form

--- a/app/views/texts/_form.html.erb
+++ b/app/views/texts/_form.html.erb
@@ -12,7 +12,7 @@
 
 
   <div class="field">
-    <%# f.label :user_id %><br />
+    <% f.label :user_id %><br />
     <%= f.collection_select :user_id, User.all, :id, :name %>
   </div>
 
