--- a/app/views/texts/_form.html.erb
+++ b/app/views/texts/_form.html.erb
@@ -9,7 +9,8 @@
       </ul>
     </div>
   <% end %>
-
+  
+<a href='/auth/twitter'>Login Via Twitter</a>
 
   <div class="field">
     <% f.label :user_id %><br />
