--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<h1> <%= current_user.twitter_id if current_user != nil %></h1>
   <div class="container">
+    <h4 style="text-align:right"> You are logged in as <%= current_user.name.capitalize if current_user != nil %>.</h4>
     <%= yield %>
   </div>
 </body>
