new background new button

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -3,7 +3,7 @@
 /* own css */
 
 body {
-  background-color: #ececec ;
+  background-image: image-url("bedge_grunge.png");
   padding-top: 30px;
 }
 
