--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,6 +8,6 @@
   <%= link_to "Start without Sign in", new_text_path, class:"btn btn-primary btn-large" %>
   <br />
   <br />
-  <div class="btn btn-primary btn-large"><a href='/auth/twitter' style="color:#fff">Login Via Twitter</a></div>
+  <div class="btn btn-primary btn-large"><a href='/auth/twitter' style="color:#fff;text-decoration:none">Login Via Twitter</a></div>
   
  </div>
