--- a/app/views/texts/show.html.erb
+++ b/app/views/texts/show.html.erb
@@ -1,5 +1,5 @@
 
-<h4 style="color:#456789">This is <%= @text.user.name%>'s square.</h4>
+<h4 style="color:#456789">This is <%= @text.user.name if @text.user %>'s square.</h4>
 <br>
 <p>
   <b>YOUR TEXT:</b>
