--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,9 +5,9 @@
   <br />
   <p>This is the project of weeks<br> of hard work by seven woman and<br> two patient coaches.</p>
   <br />
-  <%= link_to "Start without Sign in", new_text_path, class:"btn btn-primary btn-large" %>
+  <%= link_to "Start", new_text_path, class:"btn btn-primary btn-large" %>
   <br />
   <br />
-  <div class="btn btn-primary btn-large"><a href='/auth/twitter' style="color:#fff;text-decoration:none">Login Via Twitter</a></div>
+  <%= link_to "Login with Twitter", "/auth/twitter", class:"btn btn-primary btn-large" %>
   
  </div>
