--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,18 @@
 </head>
 <body>
   <div class="container">
-    <h4 style="text-align:right"> You are logged in as <%= current_user.name.capitalize if current_user %>. <a href='/logout' style="color:#fff;text-decoration:none">Logout</a></h4>
+    <div id="user_nav">
+      <% if current_user %>
+        Welcome <%= current_user.name %>
+        <%= link_to "Logout", logout_path %>"
+      <% else %>
+        <%= link_to "Login with Twitter", "/auth/twitter" %>
+      <% end %>
+  </div>
+   
     <%= yield %>
   </div>
+
 <hr>
 <% if current_user 
   if current_user.name == "tyranja" %>
