anonymous doesnt really work

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,8 +6,8 @@
   <p>This is the project of weeks<br> of hard work by seven woman and<br> two patient coaches.</p>
   <br />
   <%= link_to "Start", new_text_path, class:"btn btn-primary btn-large" %>
-  <br />
-  <br />
-  <%= link_to "Login with Twitter", "/auth/twitter", class:"btn btn-primary btn-large" %>
   
+  <!-- <br />
+  link_to "Login with Twitter", "/auth/twitter", class:"btn btn-primary btn-large" 
+   -->
  </div>
