--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,9 +6,11 @@
   <p>This is the project of weeks<br> of hard work by seven woman and<br> two patient coaches.</p>
   <hr>
   <p><%= link_to "Let's Start", new_text_path, class:"btn btn-primary btn-large" %></p>
-  <p><a href='/auth/twitter'> <img src="http://www.twitilist.com/images/sign-in-with-twitter-d.png" alt="twitter button"> </a></p>
+  <p><a href='/auth/twitter'> <img src="/sign-in-with-twitter-gray.png" alt="twitter button" > </a></p>
 
-  ## i have saved a copy of the twitter button png in assets/images folder but am not sure what the path to the file is.
-  ## so for the moment am linking to another one on the internets. need to update this.
+
+  
+
+  
 
  </div>
