--- a/app/views/texts/show.html.erb
+++ b/app/views/texts/show.html.erb
@@ -3,11 +3,9 @@
 <%= notice %>
   </p>
 <% end %>
-<h4 style="color:#456789">This is <%= @text.user.name%>'s square.</h4>
+<h4 style="color:#456789">This is <%= @text.user.name%> aka <%= @text.user.screen_name%>'s square.</h4>
 </br>
-<p> <img src="<%= @text.user.twitter_avatar %>" alt="image"> 
-
-</p>
+<p> <img src="<%= @text.user.twitter_avatar %>" alt="twitter avatar"> </p>
 <br>
 <p>
   <b>YOUR TEXT:</b>
