removed screen_name thingy

--- a/app/views/texts/show.html.erb
+++ b/app/views/texts/show.html.erb
@@ -3,7 +3,7 @@
 <%= notice %>
   </p>
 <% end %>
-<h4 style="color:#456789">This is <%= @text.user.name%> aka <%= @text.user.screen_name%>'s square.</h4>
+<h4 style="color:#456789">This is <%= @text.user.name%>'s square.</h4>
 </br>
 <p> <img src="<%= @text.user.twitter_avatar %>" alt="twitter avatar"> </p>
 <br>
