new view of all text from one user

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,3 +11,4 @@
   link_to "Login with Twitter", "/auth/twitter", class:"btn btn-primary btn-large" 
    -->
  </div>
+<%= link_to 'Listing Texts', texts_path %>
