--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
         Welcome <%= current_user.name %>! ||
         <%= link_to "Logout", logout_path %>
       <% else %>
-        <%= link_to "Login with Twitter", "/auth/twitter" %>
+        <!-- <%= link_to "Login with Twitter", "/auth/twitter" %>  -->
       <% end %>
   </div>
 
