--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,11 @@
       <% if current_user %>
         Welcome <%= current_user.name %>! ||
         <%= link_to "Logout", logout_path %>
-      <% end %>
+      <% else %>
+        <p>
+        <a href='/auth/twitter'> <img src="/sign-in-with-twitter-gray.png" alt="twitter button" > </a>
+        </p>
+       <% end %>
   </div>
 
     <%= yield %>
