--- a/app/views/texts/show.html.erb
+++ b/app/views/texts/show.html.erb
@@ -3,7 +3,7 @@
     <img src="<%= @text.user.twitter_avatar %>" alt="twitter avatar">
   </p>
   <% else %>
-    <h2><%= "This is square was mad by Anonymous." %></h2>
+    <h2><%= "This is square was made by Anonymous." %></h2>
 <% end %>
 <br>
 <div class="row">
