--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <div class="container">
     <div id="user_nav">
       <% if current_user %>
-        Welcome <%= current_user.name %>! ||
+        Welcome <%= current_user.screen_name %>! ||
         <%= link_to "Logout", logout_path %>
       <% else %>
         <p>
