--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,9 +3,9 @@
   <h2>Welcome to the Application</h2>
   <h1> Text_To_Squares </h1>
   <br />
-  <p>This is the project of weeks<br> of hard work by seven woman and<br> two patient coaches.</p>
+  <p>This is the project of weeks<br> of hard work by seven women and<br> two patient coaches.</p>
   <p>
-    <%= link_to "Let's Start", new_text_path, class:"btn btn-primary btn-large", :title => 'Your user name would be "Anonymous', :rel => 'tooltip' %>
+    <%= link_to "Let's Start", new_text_path, class:"btn btn-primary btn-large", :title => 'Your user name would be "Anonymous"', :rel => 'tooltip' %>
   </p>
  
  </div>
