--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -3,7 +3,8 @@
 /* own css */
 
 body {
-  background-image: image-url("bedge_grunge.png");
+  background-image: image-url("Butterfly.jpg");
+  background-size: 100%;
   padding-top: 30px;
 }
 
