--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,6 +1,8 @@
 $linkColor:      #222;
 $linkColorHover: #000;
 
+a  { text-shadow: 1px 1px 2px #fff, 2px 1px 2px #eee;}
+
 
 @import "bootstrap";
 
