--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -11,6 +11,7 @@
       <th></th>
     </tr>
   </thead>
+  <tbody>
 <% @texts.each do |text| %>
   <tr>
     <% if text.user.present? %>
@@ -33,7 +34,8 @@
     <td><i class="icon-trash"></i>&nbsp;<%= link_to 'Destroy', text, confirm: 'Are you sure?', method: :delete %></td>
     <td><%= text.created_at.strftime("%d %b. %Y") %></td>
   </tr>
-<% end %>
+  <% end %>
+  </tbody>
 </table>
 
 <br />
