--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -29,10 +29,19 @@
           <% end %>
       <% end %>  
     </td>
-    <td><i class="icon-stop"></i>&nbsp;<%= link_to 'Show', text %></td>
-    <td><i class="icon-wrench"></i>&nbsp;<%= link_to 'Edit', edit_text_path(text) %></td>
-    <td><i class="icon-trash"></i>&nbsp;<%= link_to 'Destroy', text, confirm: 'Are you sure?', method: :delete %></td>
-    <td><%= text.created_at.strftime("%d %b. %Y") %></td>
+    <td>
+      <i class="icon-stop"></i>&nbsp; <%= link_to 'Show', text %>
+    </td>
+    <td>
+      <% if text.user_id == current_user.id %> 
+              <i class="icon-wrench"></i>&nbsp;<%= link_to 'Edit', edit_text_path(text) %>
+      <% end %>  
+    </td>
+    <td>
+      <i class="icon-trash"></i>&nbsp;<%= link_to 'Destroy', text, confirm: 'Are you sure?', method: :delete %>
+    </td>
+    <td><%= text.created_at.strftime("%d %b. %Y") %>
+    </td>
   </tr>
   <% end %>
   </tbody>
