--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -27,14 +27,18 @@
         <td>
           <i class="icon-stop"></i>&nbsp;<%= link_to 'Show', text %>
         </td>
-        <td>
+        <td style="color:#777">
           <% if (current_user && text.user && current_user.id == text.user.id) %>
-              <i class="icon-wrench"></i>&nbsp;<%= link_to 'Edit', edit_text_path(text) %>
+            <i class="icon-wrench"></i>&nbsp;<%= link_to 'Edit', edit_text_path(text) %>
+          <% else %>
+            <i class="icon-wrench"></i>&nbsp;Edit
           <% end %>
         </td>
-        <td>
+        <td style="color:#777">
           <% if (current_user && text.user && current_user.id == text.user.id) %>
             <i class="icon-trash"></i>&nbsp;<%= link_to 'Destroy', text, confirm: 'Are you sure?', method: :delete %>
+            <% else %>
+            <i class="icon-trash"></i>&nbsp;Destroy
           <% end %>
         </td>
         <td><%= text.created_at.strftime("%d %b. %Y") %>
