--- a/app/views/texts/show.html.erb
+++ b/app/views/texts/show.html.erb
@@ -8,14 +8,15 @@
 <br>
 <div class="row">
   <div class="span12">
-    <% if @square_color == "red" %>
-      <%= link_to "Blue Squares", text_path(@text.id), :class => "btn btn-info" %> 
-    <% else %>
-      <%= link_to "Red Squares", text_path(@text.id,{:display_color => "red"}), :class => "btn btn-danger" %> 
-    <% end %>
-  </div>
+    cs: <%= @text.color_scheme %>
+    <p>Choose a color scheme:&nbsp;</p>
+      <% ['blue', 'red', 'green'].each do |color| %>
+        <%= button_to 'change', text_path(@text.id,:text => {:color_scheme => color}), 
+                       :method => :put, 
+                       :id => "#{color}_color_scheme_button",
+                       :style => "background-color: #{color}" %> 
+      <% end%>
 </div>
-
 <div class="row">
   <div class="span12" style="padding-top:20px;">
     <ol style="width:<%= @text.rows.first.length * 50 +26%>px; margin: 0 auto;">
@@ -23,11 +24,21 @@
         <li>
           <ol>
             <% row.each do |square| %>
-              <% if @square_color == "red" %>
-                <li class="square" style='background-color:#<%= square.color_red %>'></li>
+
+              <% if @text.color_scheme == "red" %>
+                <li class="square" 
+                    style='background-color:#<%= square.color_red %>'>
+                </li>
+              <% elsif @text.color_scheme == "green" %>
+                 <li class="square" 
+                     style='background-color:#<%= square.color_green %>'>
+                </li>
               <% else %>
-                <li class="square" style='background-color:#<%= square.color %>'></li> 
+                <li class="square" 
+                    style='background-color:#<%= square.color %>'>
+                </li> 
               <% end %>
+              
             <% end %>
           </ol>
         </li>
