--- a/app/views/texts/show.html.erb
+++ b/app/views/texts/show.html.erb
@@ -8,13 +8,11 @@
 <br>
 <div class="row">
   <div class="span12">
-    cs: <%= @text.color_scheme %>
     <p>Choose a color scheme:&nbsp;</p>
       <% ['blue', 'red', 'green'].each do |color| %>
         <%= button_to 'change', text_path(@text.id,:text => {:color_scheme => color}), 
                        :method => :put, 
-                       :id => "#{color}_color_scheme_button",
-                       :style => "background-color: #{color}" %> 
+                       :id => "#{color}_color_scheme_button" %> 
       <% end%>
 </div>
 <div class="row">
