--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -55,18 +55,21 @@ form.button_to {
   margin:0;
   padding:0;
   display:inline;
-  position: relative;
-  color: rgba(255,255,255,1);
-  text-decoration: none;
-  background-color: rgba(219,87,5,1);
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  border-radius: 8px;
-  -webkit-box-shadow: 0px 9px 0px rgba(219,31,5,1), 0px 9px 25px rgba(0,0,0,.7);
-  -moz-box-shadow: 0px 9px 0px rgba(219,31,5,1), 0px 9px 25px rgba(0,0,0,.7);
-  box-shadow: 0px 9px 0px rgba(219,31,5,1), 0px 9px 25px rgba(0,0,0,.7);
-  margin: 100px auto;
-  width: 160px;
+
+ 
+}
+
+
+
+form.button_to div, form.button_to div input{
+  display:inline;
+  border: none;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 15px rgba(0,0,0,.7);
+  -moz-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 15px rgba(0,0,0,.7);
+  box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 15px rgba(0,0,0,.7);
   text-align: center;
   
   -webkit-transition: all .1s ease;
@@ -76,9 +79,8 @@ form.button_to {
   transition: all .1s ease;
 }
 
-form.button_to div, form.button_to div input{
-  display:inline;
-}
+
+
 
 .red_color_scheme_button {
     position: relative;
